Update mobile optimize in home page

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -91,7 +91,7 @@
 
   .home-page .text-zone {
     position: initial;
-    width: 100%;
+    width: 98%;
     transform: none;
     padding: 10px;
     box-sizing: border-box;
@@ -106,9 +106,9 @@
 
   .logo-container {
     position: relative;
-    width: 100px;
+    width: 220px;
     height: auto;
-    top: 50px;
+    top: 0;
     right: 0;
     box-sizing: border-box;
     margin: auto;
