remove this from home - index.css file

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -115,12 +115,12 @@
     left: 0;
   }
 
-  .logo-container svg {
-    position: absolute;
-    top: auto;
-    right: auto;
-    bottom: auto;
-    left: 0;
-    margin: auto;
-  }
+  // .logo-container svg {
+  //   position: absolute;
+  //   top: auto;
+  //   right: auto;
+  //   bottom: auto;
+  //   left: 0;
+  //   margin: auto;
+  // }
 }
