--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -134,3 +134,11 @@
     }
   }
 }
+@media screen and (max-width: 800px) {
+  .container.portfolio-page {
+    .image-box {
+      flex-basis: calc(50% - 15px); /* Two images in a row with gap in between */
+      max-width: calc(50% - 15px);
+    }
+  }
+}
