1 image in a row in portfolio page-max-width:480

--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -142,3 +142,11 @@
     }
   }
 }
+@media screen and (max-width: 480px) {
+  .container.portfolio-page {
+    .image-box {
+      flex-basis: 100%; /* One image in a row */
+      max-width: 100%;
+    }
+  }
+}
