--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -61,6 +61,7 @@
     .tools {
       font-size: 14px;
       margin-bottom: 5px;
+      margin-right: 15px;
       color: #fff;
       font-weight: 700;
     }
@@ -129,7 +130,9 @@
       gap: 15px;
     }
     .image-box {
-      flex-basis: calc(33.33% - 15px); /* Three images in a row with gap in between */
+      flex-basis: calc(
+        33.33% - 15px
+      ); /* Three images in a row with gap in between */
       max-width: calc(33.33% - 15px);
     }
   }
@@ -137,7 +140,9 @@
 @media screen and (max-width: 800px) {
   .container.portfolio-page {
     .image-box {
-      flex-basis: calc(50% - 15px); /* Two images in a row with gap in between */
+      flex-basis: calc(
+        50% - 15px
+      ); /* Two images in a row with gap in between */
       max-width: calc(50% - 15px);
     }
   }
